# docnote

./: README.clc  pyproject.toml
.github/workflows/: on_pr-run_cicd.yaml  on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
src_py/docnote/: __init__.py
tests_py/: docnote.test.py
